Use random.nextInt in NumberPool
There are some issues with Math.random()